--- a/style.css
+++ b/style.css
@@ -229,9 +229,10 @@ footer {
   border-top: 1px solid #4444;
   margin-top: 10px;
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
+  font-size: 14px;
 }
 
 .a_pp {
